[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/render.png" type="Texture" id=1]
[ext_resource path="res://UI/Buttons/credits.png" type="Texture" id=2]
[ext_resource path="res://UI/Buttons/start_game.png" type="Texture" id=3]
[ext_resource path="res://Menu Scene.gd" type="Script" id=4]
[ext_resource path="res://UI/credits_final.png" type="Texture" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.69702
margin_right = 1.69702
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Darkness" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Tab" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Boom boom" type="TextureRect" parent="Game Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Game Tab"]
anchor_left = 0.471575
anchor_top = 0.371259
anchor_right = 0.99397
anchor_bottom = 0.975889
margin_left = 1156.56
margin_top = 527.11
margin_right = 1597.66
margin_bottom = 818.924
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start Button" type="Button" parent="Game Tab/VBoxContainer"]
margin_right = 462.0
margin_bottom = 156.0
icon = ExtResource( 3 )
flat = true

[node name="Credits Button" type="Button" parent="Game Tab/VBoxContainer"]
margin_top = 160.0
margin_right = 462.0
margin_bottom = 316.0
icon = ExtResource( 2 )
flat = true

[node name="Credits Tab" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Credits" type="TextureRect" parent="Credits Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="Credits Tab"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Game Tab/VBoxContainer/Start Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Game Tab/VBoxContainer/Credits Button" to="." method="_on_Credits_Button_pressed"]
[connection signal="pressed" from="Credits Tab/Return" to="." method="_on_Return_pressed"]
